--- a/siteWeb/index.html
+++ b/siteWeb/index.html
@@ -121,7 +121,7 @@
 
                                         </p>
                                         <p class="text-black-50 mb-0" style="text-align: justify;">
-                                            Vico se fait souvent bouli par son reuf mais il est sympa quand même.
+                                            Vico se fait souvent bouli par son reuf (dommage).
 
                                         </p>
                                     </div>
